Fixed services: hide border when service is collapse.

--- a/Acme/css/style.css
+++ b/Acme/css/style.css
@@ -205,12 +205,16 @@ ul#services li{
 } */
 
 .expand {
-    padding: 0 10px;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.5s ease;
+}
+
+.expand > p {
+    padding: 10px;
     border: 1px solid #cccccc;
 }
+
 
 
 /* footer */
